--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 Este proyecto pretende monitorear el SICOP para avisar cuándo hay una licitación de la UCR para poder avisar a los proveedores, sobretodo los que son pequeños.
+Desarrollador principal: Sergio Valverde
+
 
